[workspace]
members = [
    "bin/raiden-client",
    "raiden/api",
    "raiden/blockchain",
    "raiden/cli",
    "raiden/macros",
    "raiden/state-machine",
    "raiden/storage",
    "raiden/transport",
]


[profile.dev]
opt-level = 2
panic = "abort"
[profile.dev.package."*"]
opt-level = 3

# The `test` profile mimics the `dev` profile to avoid recompilations.
[profile.test]
opt-level = 2
[profile.test.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
lto = true
