[workspace]
members = [
    "bin/common",
    "bin/raiden",
    "bin/state-replayer",
    "bin/token-ops",
    "raiden/raiden-rs",
    "raiden/api",
    "raiden/blockchain",
    "raiden/macros",
    "raiden/state-machine",
    "raiden/transition",
    "raiden/network/messages",
    "raiden/network/transport",
]
default-members = [
    "raiden/raiden-rs",
    "raiden/api",
    "raiden/blockchain",
    "raiden/macros",
    "raiden/state-machine",
    "raiden/transition",
    "raiden/network/messages",
    "raiden/network/transport",
]
resolver = "2"

[profile.dev]
opt-level = 2
panic = "abort"
[profile.dev.package."*"]
opt-level = 3

# The `test` profile mimics the `dev` profile to avoid recompilations.
[profile.test]
opt-level = 2
[profile.test.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
lto = true

# https://docs.rs/about/metadata
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Z", "build-std"]
