[package]
name = "raiden-blockchain"
version = "0.1.0"
authors = ["Rakan Alhneiti <rakan.alhneiti@gmail.com>"]
description = "Raiden Network implementation in Rust"
repository = "https://github.com/rakanalh/raiden-rust"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "ethereum", "layer-2", "scaling"]
rust-version = "1.59"

[dependencies]
# 3rd-Party
async-trait = { version = "0.1.51", default-features = false }
ecies = { version = "0.2.0" }
ethsign = { version = "0.8.0", default-features = true }
derive_more = { version = "0.99.11", default-features = false }
ethabi = { version = "16.0.0", default-features = false }
hex = { version = "0.4.3" }
serde_json = { version = "1.0.59", default-features = false }
thiserror = { version = "1.0", default-features = false }
tracing = { version = "0.1.37", default-features = false }
tokio = { version = "1.0", features = ["sync", "macros", "time"], default-features = false }
web3 = { version = "0.18.0", default-features = false, features = [ "http", "signing" ] }

# Raiden
raiden-primitives = { path = "../primitives" }
raiden-state-machine = { path = "../state-machine", features = [ "storage" ] }
