[package]
name = "raiden-cli"
version = "0.1.0"
authors = ["Rakan Alhneiti <rakan.alhneiti@gmail.com>"]
description = "Raiden Network implementation in Rust"
repository = "https://github.com/rakanalh/raiden-rust"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "ethereum", "layer-2", "scaling"]
rust-version = "1.59"

[dependencies]
# 3rd-Party
ethsign = { version = "0.8.0" }
rpassword = { version = "5.0.1", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
web3 = { version = "0.18.0", default-features = false, features = ["signing"] }

# Raiden
raiden-blockchain = { path = "../../raiden/blockchain" }
