[package]
name = "raiden-client"
version = "0.1.0"
authors = ["Rakan Alhneiti <rakan.alhneiti@gmail.com>"]
description = "Raiden Network implementation in Rust"
repository = "https://github.com/rakanalh/raiden-rust"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "ethereum", "layer-2", "scaling"]
rust-version = "1.59"

[dependencies]
# 3rd-Party
ethsign = { version = "0.8.0" }
futures = { version = "0.3.21", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
tracing = { version = "0.1.37", default-features = false }
web3 = { version = "0.18.0", default-features = false, features = ["signing"] }

# Raiden
raiden-api = { path = "../../raiden/api" }
raiden-blockchain = { path = "../../raiden/blockchain" }
raiden-primitives = { path = "../../raiden/primitives" }
raiden-storage = { path = "../../raiden/storage" }
raiden-state-machine = { path = "../../raiden/state-machine" }
raiden-transition = { path = "../../raiden/transition" }
