[package]
name = "raiden-pathfinding"
version = "0.1.0"
authors = ["Rakan Alhneiti <rakan.alhneiti@gmail.com>"]
description = "Raiden Network implementation in Rust"
repository = "https://github.com/rakanalh/raiden-rust"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "ethereum", "layer-2", "scaling"]
rust-version = "1.59"

[dependencies]
# 3rd-Party
chrono = { version = "0.4.19", default-features = false }
derive_more = { version = "0.99.11", default-features = false }
reqwest = { version = "0.11.4", default-features = false, features = ["json"] }
rand = { version = "0.8.4", default-features = false }
serde = { version = "1.0.136", default-features = false, features = [ "derive" ] }
tracing = { version = "0.1.37", default-features = false }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.0", features = ["macros", "time"], default-features = false }
web3 = { version = "0.18.0", default-features = false, features = [ "http" ] }

# Raiden
raiden-primitives = { version = "0.1.0", path = "../primitives" }
raiden-blockchain = { version = "0.1.0", path = "../blockchain" }
raiden-state-machine = { version = "0.1.0", path = "../state-machine" }
