[package]
name = "raiden-primitives"
version = "0.1.0"
authors = ["Rakan Alhneiti <rakan.alhneiti@gmail.com>"]
description = "Raiden Network implementation in Rust"
repository = "https://github.com/rakanalh/raiden-rust"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "ethereum", "layer-2", "scaling"]
rust-version = "1.59"

[dependencies]
# 3rd-Party
derive_more = { version = "0.99.11", default-features = false }
hex = { version = "0.4.3" }
lazy_static = { version = "1.4.0", default-features = false }
serde = { version = "1.0.136", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.59", default-features = false }
sha2 = { version = "0.10.6" }
web3 = { version = "0.18.0", default-features = false, features = [ "signing" ] }

# Raiden
