[package]
name = "raiden-state-machine"
version = "0.1.0"
authors = ["Rakan Alhneiti <rakan.alhneiti@gmail.com>"]
description = "Raiden Network implementation in Rust"
repository = "https://github.com/rakanalh/raiden-rust"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "ethereum", "layer-2", "scaling"]
rust-version = "1.59"

[dependencies]
# 3rd-Party
derive_more = { version = "0.99.11", default-features = false }
ethabi = { version = "16.0.0", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false, features = ["serde1"] }
serde = { version = "1.0.136", default-features = false, features = [ "derive" ] }
lazy_static = { version = "1.4.0", default-features = false }
web3 = { version = "0.18.0", default-features = false, features = [ "signing" ] }

# Raiden
raiden-macros = { path = "../macros" }
