[package]
name = "raiden-state-machine"
version = "0.1.0"
authors = ["Rakan Alhneiti <rakan.alhneiti@gmail.com>"]
description = "Raiden Network implementation in Rust"
repository = "https://github.com/rakanalh/raiden-rust"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "ethereum", "layer-2", "scaling"]
rust-version = "1.59"

[dependencies]
# 3rd-Party
bisection = { version = "0.1.0", default-features = false }
chrono = { version = "0.4.19", default-features = false, optional = true }
derive_more = { version = "0.99.11", default-features = false }
hex = { version = "0.4.3", optional = true }
itertools = { version = "0.10.5", default-features = false }
num-traits = { version = "0.2.13" }
rand_chacha = { version = "0.3.1", default-features = false, features = ["serde1"] }
rusqlite = { version = "0.25.3", default-features = false, features = [ "chrono" ], optional = true }
rug = { version = "1.19.2", features = [ "num-traits" ] }
serde = { version = "1.0.136", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.59", default-features = false, optional = true }
ulid = { version = "0.4.1", default-features = false, optional = true }
web3 = { version = "0.18.0", default-features = false, features = [ "signing" ] }

# Raiden
raiden-macros = { version = "0.1.0", path = "../macros" }
raiden-primitives = { version = "0.1.0", path = "../primitives" }

[dev-dependencies]
rand = { version = "0.8.4" }
ethsign = { version = "0.8.0", default-features = true }

[features]
storage = [
    "chrono",
    "hex",
    "rusqlite",
    "serde_json",
    "ulid",
]
