[package]
name = "raiden-storage"
version = "0.1.0"
authors = ["Rakan Alhneiti <rakan.alhneiti@gmail.com>"]
description = "Raiden Network implementation in Rust"
repository = "https://github.com/rakanalh/raiden-rust"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "ethereum", "layer-2", "scaling"]
rust-version = "1.59"

[dependencies]
# 3rd-Party
derive_more = { version = "0.99.11", default-features = false }
rusqlite = { version = "0.25.3", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
ulid = { version = "0.4.1", default-features = false }

# Raiden
raiden-primitives = { path = "../primitives" }
raiden-state-machine = { path = "../state-machine" }
