[package]
name = "raiden-transition"
version = "0.1.0"
authors = ["Rakan Alhneiti <rakan.alhneiti@gmail.com>"]
description = "Raiden Network implementation in Rust"
repository = "https://github.com/rakanalh/raiden-rust"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "ethereum", "layer-2", "scaling"]
rust-version = "1.59"

[dependencies]
# 3rd-Party
futures = { version = "0.3.21", default-features = false }
parking_lot = { version = "0.11.2", default-features = false }
tokio = { version = "1.0", default-features = false }
tracing = { version = "0.1.37", default-features = false }
web3 = { version = "0.18.0", default-features = false }

# Raiden
raiden-blockchain = { path = "../blockchain" }
raiden-primitives = { path = "../primitives" }
raiden-network-messages = { path = "../network/messages" }
raiden-pathfinding = { path = "../pathfinding" }
raiden-state-machine = { path = "../state-machine" }
