[package]
name = "raiden-network-messages"
version = "0.1.0"
authors = ["Rakan Alhneiti <rakan.alhneiti@gmail.com>"]
description = "Raiden Network messages"
repository = "https://github.com/rakanalh/raiden-rust"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "ethereum", "layer-2", "scaling"]
rust-version = "1.59"

[dependencies]
# 3rd-Party
canonical_json = { version = "0.5.0" }
chrono = { version = "0.4.24", default-features = false, features = [ "serde" ] }
serde = { version = "1.0.136", default-features = false, features = [ "derive" ] }
serde-rlp = "0.1.4"
serde_json = { version = "1.0.59", default-features = false }
web3 = { version = "0.18.0", default-features = false, features = ["signing"] }

# Raiden
raiden-blockchain = { path = "../../blockchain" }
raiden-primitives = { path = "../../primitives" }
raiden-state-machine = { path = "../../state-machine" }
